Removed Styling/ tried to populate properties according to selected task

--- a/AlveoEnergy/src/app/components/gantt/gantt.component.html
+++ b/AlveoEnergy/src/app/components/gantt/gantt.component.html
@@ -2,3 +2,15 @@
 <div (click)="Save()">
     Save
 </div>
+<div>
+    <p>
+        Task Properties
+    </p>
+    <div style="border: 1px solid grey; height: 200px;">
+        <p style="color: grey;" id="taskNameDisplay">Task Name : {{TaskName}}</p>
+        <p style="color: grey;" id="taskStartDateDisplay">Task Start Date : {{TaskStartDate}}</p>
+        <p style="color: grey;" id="taskEndDisplay">Task End Date : {{TaskEndDate}}</p>
+        <p style="color: grey;" id="taskDurationDisplay">Task Duration : {{TaskDuration}}</p>
+        <p style="color: grey;" id="taskLeaderDisplay">Task Leader : {{TaskLeader}}</p>
+    </div>
+</div>
