--- a/AlveoEnergy/src/app/components/inventory/inventory.component.html
+++ b/AlveoEnergy/src/app/components/inventory/inventory.component.html
@@ -1,24 +1,54 @@
-<h2>Inventory</h2>
 
- <input #partSearch placeholder="part number" />
+<a mat-raised-button href="javascript:void()" (click)="toggleTableRows()" color="primary">Toggle Rows</a>
 
-<input type="button" value="Search" (click)="getPartNumber(partSearch.value)" />
+<table mat-table [dataSource]="dataItemsList" multiTemplateDataRows>
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> id </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
 
 
-<p> Part Number</p>
-<textarea readonly id="partNumDisp" style="resize: none;"></textarea>
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
 
-<p>Part Description</p>
-<textarea readonly id="partDescriptionDisp" style="resize: none;"></textarea>
+  <ng-container matColumnDef="Make">
+    <th mat-header-cell *matHeaderCellDef> Make </th>
+    <td mat-cell *matCellDef="let element"> {{element.Make}} </td>
+  </ng-container>
 
-<p>Part Quantity in stock</p>
-<textarea readonly id="partQtyDisp" style="resize: none;"></textarea>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> actions </th>
+    <td mat-cell *matCellDef="let element">
+      <a mat-button href="javascript:void()" (click)="element.isExpanded = !element.isExpanded">View
+        Items</a>
+    </td>
+  </ng-container>
 
-<p>Part Quantity Ordered</p>
-<textarea readonly id="partQtyOrderedDisp" style="resize: none;"></textarea>
 
-<p>Part Cost</p>
-<textarea readonly id="partCostDisp" style="resize: none;"></textarea>
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedItemsColumnsList.length">
 
-<p>Part Supplier</p>
-<textarea readonly id="PartSupplierDisp" style="resize: none;"></textarea>
+      <div class="row item-element-detail" [@detailExpand]="element.isExpanded ? 'expanded' : 'collapsed'">
+        <mat-list>
+          <mat-list-item *ngFor="let subject of element.subjects">
+            <div mat-line>{{subject.name}}</div>
+            <div mat-line> {{subject.PartNumber}} | Qty: {{subject.Qty}}</div>
+          </mat-list-item>
+        </mat-list>
+      </div>
+
+    </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedItemsColumnsList;sticky: true"></tr>
+  <tr mat-row *matRowDef="let element; columns: displayedItemsColumnsList;" class="item-element-row"
+    [class.student-expanded-row]="element.isExpanded"></tr>
+
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="item-detail-row"></tr>
+
+</table>
+
