--- a/AlveoEnergy/src/app/components/inventory/inventory.component.html
+++ b/AlveoEnergy/src/app/components/inventory/inventory.component.html
@@ -1,17 +1,15 @@
-
 <a mat-raised-button href="javascript:void()" (click)="toggleTableRows()" color="primary">Toggle Rows</a>
 
-<table mat-table [dataSource]="dataItemsList" multiTemplateDataRows>
+<table *ngIf="dataItemsList && dataItemsList.data" mat-table [dataSource]="dataItemsList" multiTemplateDataRows>
 
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> id </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
   </ng-container>
-
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Make">
@@ -27,28 +25,22 @@
     </td>
   </ng-container>
 
-
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" [attr.colspan]="displayedItemsColumnsList.length">
-
       <div class="row item-element-detail" [@detailExpand]="element.isExpanded ? 'expanded' : 'collapsed'">
         <mat-list>
-          <mat-list-item *ngFor="let subject of element.subjects">
-            <div mat-line>{{subject.name}}</div>
-            <div mat-line> {{subject.PartNumber}} | Qty: {{subject.Qty}}</div>
+          <mat-list-item *ngFor="let types of element.Types">
+            <div mat-line>{{types.Name}}</div>
+            <div mat-line> {{types.PartNumber}} | Qty: {{types.Qty}}</div>
           </mat-list-item>
         </mat-list>
       </div>
-
     </td>
   </ng-container>
-
 
   <tr mat-header-row *matHeaderRowDef="displayedItemsColumnsList;sticky: true"></tr>
   <tr mat-row *matRowDef="let element; columns: displayedItemsColumnsList;" class="item-element-row"
     [class.student-expanded-row]="element.isExpanded"></tr>
-
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="item-detail-row"></tr>
 
 </table>
-
