--- a/AlveoEnergy/src/app/components/inventory/inventory.component.html
+++ b/AlveoEnergy/src/app/components/inventory/inventory.component.html
@@ -1,4 +1,4 @@
-<a mat-raised-button href="javascript:void()" (click)="toggleTableRows()" color="primary">Toggle Rows</a>
+<!-- <a mat-raised-button href="javascript:void()" (click)="toggleTableRows()" color="primary">Toggle Rows</a>
 
 <table *ngIf="dataItemsList && dataItemsList.data" mat-table [dataSource]="dataItemsList" multiTemplateDataRows>
 
@@ -43,4 +43,49 @@
     [class.student-expanded-row]="element.isExpanded"></tr>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="item-detail-row"></tr>
 
-</table>
+</table> -->
+
+<mat-tab-group>
+  <mat-tab label="PLC's">
+
+    <table mat-table [dataSource]="dataItemsList" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID. </th>
+        <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name. </th>
+        <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="Make">
+        <th mat-header-cell *matHeaderCellDef> Brand </th>
+        <td mat-cell *matCellDef="let element"> {{element.Make}} </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+  </mat-tab>
+
+
+  <mat-tab label="HMI's">
+    
+    Content 2 
+  
+  </mat-tab>
+
+
+  <mat-tab label="VSD's">
+    
+    Content 3 
+  
+  </mat-tab>
+
+  
+</mat-tab-group>
+
+
