--- a/AlveoEnergy/src/app/components/inventory/inventory.component.html
+++ b/AlveoEnergy/src/app/components/inventory/inventory.component.html
@@ -1,68 +1,31 @@
-<!-- <a mat-raised-button href="javascript:void()" (click)="toggleTableRows()" color="primary">Toggle Rows</a>
-
-<table *ngIf="dataItemsList && dataItemsList.data" mat-table [dataSource]="dataItemsList" multiTemplateDataRows>
-
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> id </th>
-    <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Make">
-    <th mat-header-cell *matHeaderCellDef> Make </th>
-    <td mat-cell *matCellDef="let element"> {{element.Make}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> actions </th>
-    <td mat-cell *matCellDef="let element">
-      <a mat-button href="javascript:void()" (click)="element.isExpanded = !element.isExpanded">View
-        Items</a>
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedItemsColumnsList.length">
-      <div class="row item-element-detail" [@detailExpand]="element.isExpanded ? 'expanded' : 'collapsed'">
-        <mat-list>
-          <mat-list-item *ngFor="let types of element.Types">
-            <div mat-line>{{types.Name}}</div>
-            <div mat-line> {{types.PartNumber}} | Qty: {{types.Qty}}</div>
-          </mat-list-item>
-        </mat-list>
-      </div>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedItemsColumnsList;sticky: true"></tr>
-  <tr mat-row *matRowDef="let element; columns: displayedItemsColumnsList;" class="item-element-row"
-    [class.student-expanded-row]="element.isExpanded"></tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="item-detail-row"></tr>
-
-</table> -->
-
 <mat-tab-group>
   <mat-tab label="PLC's">
 
     <table mat-table [dataSource]="dataItemsList" class="mat-elevation-z8">
 
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> ID. </th>
+        <th mat-header-cell *matHeaderCellDef> id </th>
         <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="partNumber">
+        <th mat-header-cell *matHeaderCellDef> Part Number </th>
+        <td mat-cell *matCellDef="let element"> {{element.PartNumber}} </td>
       </ng-container>
     
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name. </th>
+        <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
       </ng-container>
     
       <ng-container matColumnDef="Make">
-        <th mat-header-cell *matHeaderCellDef> Brand </th>
+        <th mat-header-cell *matHeaderCellDef> Make </th>
         <td mat-cell *matCellDef="let element"> {{element.Make}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Qty">
+        <th mat-header-cell *matHeaderCellDef> Quantity </th>
+        <td mat-cell *matCellDef="let element"> {{element.Qty}} </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
