--- a/AlveoEnergy/src/app/components/inventory/inventory.component.html
+++ b/AlveoEnergy/src/app/components/inventory/inventory.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group>
   <mat-tab label="PLC's">
 
-    <table mat-table [dataSource]="dataItemsList" class="mat-elevation-z8">
+    <table *ngIf="dataItemsList && dataItemsList.data" mat-table [dataSource]="dataItemsList" class="mat-elevation-z8">
 
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -12,12 +12,12 @@
         <th mat-header-cell *matHeaderCellDef> Part Number </th>
         <td mat-cell *matCellDef="let element"> {{element.PartNumber}} </td>
       </ng-container>
-    
+
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
       </ng-container>
-    
+
       <ng-container matColumnDef="Make">
         <th mat-header-cell *matHeaderCellDef> Make </th>
         <td mat-cell *matCellDef="let element"> {{element.Make}} </td>
@@ -27,28 +27,26 @@
         <th mat-header-cell *matHeaderCellDef> Quantity </th>
         <td mat-cell *matCellDef="let element"> {{element.Qty}} </td>
       </ng-container>
-    
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <tr mat-header-row *matHeaderRowDef="displayedItemsColumnsList"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedItemsColumnsList;"></tr>
     </table>
 
   </mat-tab>
 
 
   <mat-tab label="HMI's">
-    
-    Content 2 
-  
+
+    Content 2
+
   </mat-tab>
 
 
   <mat-tab label="VSD's">
-    
-    Content 3 
-  
+
+    Content 3
+
   </mat-tab>
 
-  
+
 </mat-tab-group>
-
-
