--- a/AlveoEnergy/src/app/components/projects/projects.component.html
+++ b/AlveoEnergy/src/app/components/projects/projects.component.html
@@ -1,6 +1,87 @@
-<ul>
-    <li><a href="#">View Projects</a></li>
-    <li><a href="#">Add New Project</a></li>
-    <li><a href="#">Add New Task</a></li>
-  </ul>
+<mat-tab-group>
+  <mat-tab label="Projects">
 
+<mat-form-field *ngIf="projectsList && projectsList.data">
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyProjectFilter($event)" placeholder="Ex. ium" #input>
+</mat-form-field>
+
+<table *ngIf="projectsList && projectsList.data" mat-table [dataSource]="projectsList" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="projectNumber">
+    <th mat-header-cell *matHeaderCellDef> Project Number </th>
+    <td mat-cell *matCellDef="let element"> {{element.Number}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="projectName">
+    <th mat-header-cell *matHeaderCellDef> Project Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.Name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="projectStartDate">
+    <th mat-header-cell *matHeaderCellDef> Start Date </th>
+    <td mat-cell *matCellDef="let element"> {{element.StartDate}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="projectEndDate">
+    <th mat-header-cell *matHeaderCellDef> Deadline </th>
+    <td mat-cell *matCellDef="let element"> {{element.EndDate}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="projectLeader">
+    <th mat-header-cell *matHeaderCellDef> Leader </th>
+    <td mat-cell *matCellDef="let element"> {{element.Leader}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedProjectsColumnsList"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedProjectsColumnsList;"></tr>
+
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+  </tr>
+
+</table>
+
+</mat-tab>
+
+<mat-tab label="Add New Project">
+
+  <div class="testbox">
+    <form action="/">
+      <div class="banner">
+        <h1>Add New Project</h1>
+      </div>
+      <div class="colums">
+        <div class="item">
+          <label for="nProjectNumber"> Project Number<span>*</span></label>
+          <input style="text-align: right;" id="nProjectNumber" type="text" name="projectNumberInput" required/>
+        </div>
+        <div class="item">
+          <label for="nProjectName"> Project Name<span>*</span></label>
+          <input style="text-align: right;" id="nProjectName" type="text" name="projectNameInput" required/>
+        </div>
+        <div class="item">
+          <label for="nprojectStart">Start Date<span>*</span></label>
+          <input style="text-align: right;" id="nprojectStart" type="date" name="projectStartInput" required/>
+        </div>
+        <div class="item">
+          <label for="nProjectend">End Date<span>*</span></label>
+          <input style="text-align: right;" id="nProjectend" type="date" name="projectEndInput" required/>
+        </div>
+        <div class="item">
+          <label for="nProjectEngineer">Project Engineer<span>*</span></label>
+          <input style="text-align: right;" id="nProjectEngineer" type="text" name="projectEngineerInput" required/>
+        </div>
+        <div class="item">
+          <label for="nProjectLeader">Project Leader<span>*</span></label>
+          <input style="text-align: right;" id="nProjectLeader" type="text" name="projectLeaderInput" required/>
+        </div>
+      </div>
+      <div class="btn-block">
+        <button type="submit" >Submit</button>
+      </div>
+    </form>
+  </div>
+
+</mat-tab>
+</mat-tab-group> 
