--- a/AlveoEnergy/src/app/components/projects/projects.component.scss
+++ b/AlveoEnergy/src/app/components/projects/projects.component.scss
@@ -217,3 +217,14 @@ ul {
     padding-bottom:5px;
     }
     }
+
+    p {
+      font-family: Lato;
+    }
+    table {
+      width: 100%;
+    }
+    .mat-form-field {
+      font-size: 14px;
+      width: 100%;
+    }
