--- a/AlveoEnergy/src/app/components/personnel/personnel.component.scss
+++ b/AlveoEnergy/src/app/components/personnel/personnel.component.scss
@@ -18,11 +18,21 @@ ul {
     text-decoration: none;
   }
   
-  /* Change the link color to #111 (black) on hover */
   li a:hover {
     background-color: #111;
   }
 
   .active {
     background-color: #4CAF50;
+  }
+
+  p {
+    font-family: Lato;
+  }
+  table {
+    width: 100%;
+  }
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
   }
