Staged Changes for work at home

--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -3,6 +3,7 @@
 	<a routerLink="/projects-component" routerLinkActive="active">Projects</a>
 	<a routerLink="/inventory-component" routerLinkActive="active">Inventory</a>
 	<a routerLink="/personnel-component" routerLinkActive="active">Personnel</a>
+	<a routerLink="/scanner-component" routerLinkActive="active">Scanner</a>
 	<a href="#">Logout</a>
   </div>
   
