--- a/AlveoEnergy/src/app/components/scanner/scanner.component.html
+++ b/AlveoEnergy/src/app/components/scanner/scanner.component.html
@@ -1,4 +1,6 @@
-<zxing-scanner (scanSuccess)="onCodeResult($event)"></zxing-scanner>
+<zxing-scanner #scanner [autostart]="false" [device]="selectedDevice" (scanSuccess)="onCodeResult($event)"
+style="height: 200px;">
+</zxing-scanner>
 
 <section class="results" *ngIf="qrResultString">
   <div>
