--- a/AlveoEnergy/src/app/components/personnel/personnel.component.html
+++ b/AlveoEnergy/src/app/components/personnel/personnel.component.html
@@ -10,7 +10,7 @@
 
   <ng-container matColumnDef="idnum">
     <th mat-header-cell *matHeaderCellDef> ID Number </th>
-    <td mat-cell *matCellDef="let element"> {{element.IDNumber}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
   </ng-container>
 
   <ng-container matColumnDef="fullName">
@@ -20,12 +20,12 @@
 
   <ng-container matColumnDef="position">
     <th mat-header-cell *matHeaderCellDef> Position </th>
-    <td mat-cell *matCellDef="let element"> {{element.Position}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Surname}} </td>
   </ng-container>
 
   <ng-container matColumnDef="employementDate">
     <th mat-header-cell *matHeaderCellDef> Start Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.EmployementDate}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.StartDate}} </td>
   </ng-container>
 
   <ng-container matColumnDef="contactNum">
