--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -5,6 +5,7 @@
 	<a routerLink="/personnel-component" routerLinkActive="active">Personnel</a>
 	<a routerLink="/scanner-component" routerLinkActive="active">Scanner</a>
 	<a routerLink="/orders-component" routerLinkActive="active">Orders</a>
+	<a routerLink="/invoice-component" routerLinkActive="active">Invoicing</a>
 	<a href="#">Logout</a>
   </div>
   
