--- a/AlveoEnergy/src/app/components/invoice/invoice.component.html
+++ b/AlveoEnergy/src/app/components/invoice/invoice.component.html
@@ -1,6 +1,18 @@
-<div id="Content">
-<h1>Hello World</h1>
-<p>This is my First PDF</p>
-</div>
+<div id="content" #content>  
+    <mat-card>  
+      <div class="alert alert-info">  
+          <strong>Html To PDF Conversion - Angular 6</strong>  
+      </div>  
+      <div>  
+        <input type="button" value="CPTURE" (click)="captureScreen()"/>  
+      </div>  
+    </mat-card>  
+  </div>  
+  <div >  
+    <mat-card>  
+      <table id="contentToConvert">  
 
-<button (click)=*SavePDF>Save</button>
+        </table>  
+          
+    </mat-card>  
+  </div>  
