--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -4,6 +4,7 @@
 	<a routerLink="/inventory-component" routerLinkActive="active">Inventory</a>
 	<a routerLink="/personnel-component" routerLinkActive="active">Personnel</a>
 	<a routerLink="/scanner-component" routerLinkActive="active">Scanner</a>
+	<a routerLink="/qr-code-component" routerLinkActive="active">QR Code Generator</a>
 	<a routerLink="/orders-component" routerLinkActive="active">Orders</a>
 	<a routerLink="/invoice-component" routerLinkActive="active">Invoicing</a>
 	<a href="#">Logout</a>
