--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -7,11 +7,11 @@
 	<a routerLink="/qr-code-component" routerLinkActive="active">QR Code Generator</a>
 	<a routerLink="/orders-component" routerLinkActive="active">Orders</a>
 	<a routerLink="/invoice-component" routerLinkActive="active">Invoicing</a>
-	<a href="#">Logout</a>
+	<a (click)="logout()">Logout</a>
   </div>
   
   <div class="content">
-	<h2>Alveo Energy Management</h2>
+	<h2><img style="height: 100px; width: 100px;" src="../assets/img/AlveoLogo.png" alt="logo"> Alveo Energy Management</h2>
 	<router-outlet>
 	</router-outlet>
   </div>
