--- a/AlveoEnergy/src/app/components/invoice/invoice.component.html
+++ b/AlveoEnergy/src/app/components/invoice/invoice.component.html
@@ -31,7 +31,7 @@
     </tr>
     <tr>
         <td style="text-align: right;">Customer ID</td>
-        <td style="padding-left: 80px;">{{Customer.Name}}</td>
+        <td style="padding-left: 80px;">{{Customer.name}}</td>
     </tr>
     <tr>
         <td style="text-align: right;">Valid Until</td>
