--- a/AlveoEnergy/src/app/components/personnel/personnel.component.html
+++ b/AlveoEnergy/src/app/components/personnel/personnel.component.html
@@ -34,7 +34,7 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedPersonnelColumnsList"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedPersonnelColumnsList;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedPersonnelColumnsList;" (click)="getPersonnelRecord(row)"></tr>
 
   <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
