--- a/AlveoEnergy/src/app/components/projects/projects.component.html
+++ b/AlveoEnergy/src/app/components/projects/projects.component.html
@@ -34,7 +34,7 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedProjectsColumnsList"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedProjectsColumnsList;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedProjectsColumnsList;" (click)="getProjectRecord(row)"></tr>
 
   <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
