--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -7,6 +7,7 @@
 	<a routerLink="/qr-code-component" routerLinkActive="active">QR Code Generator</a>
 	<a routerLink="/orders-component" routerLinkActive="active">Orders</a>
 	<a routerLink="/invoice-component" routerLinkActive="active">Invoicing</a>
+	<a routerLink="/quote-component" routerLinkActive="active">Quotes</a>
 	<a (click)="logout()">Logout</a>
   </div>
   
