--- a/AlveoEnergy/src/app/components/gantt/gantt.component.html
+++ b/AlveoEnergy/src/app/components/gantt/gantt.component.html
@@ -1,16 +1,14 @@
 <div #gantt_here class='gantt-chart'></div>
-<div (click)="Save()">
-    Save
-</div>
+Color
+<input id="taskColor" [(ngModel)]="taskColor">
 <div>
     <p>
         Task Properties
     </p>
     <div style="border: 1px solid grey; height: 200px;">
-        <p style="color: grey;" id="taskNameDisplay">Task Name : {{TaskName}}</p>
-        <p style="color: grey;" id="taskStartDateDisplay">Task Start Date : {{TaskStartDate}}</p>
-        <p style="color: grey;" id="taskEndDisplay">Task End Date : {{TaskEndDate}}</p>
-        <p style="color: grey;" id="taskDurationDisplay">Task Duration : {{TaskDuration}}</p>
-        <p style="color: grey;" id="taskLeaderDisplay">Task Leader : {{TaskLeader}}</p>
+        <p style="color: grey;" id="taskNameDisplay">Task Name : </p>
+        <p style="color: grey;" id="taskStartDateDisplay">Task Start Date : </p>
+        <p style="color: grey;" id="taskEndDisplay">Task End Date : </p>
+        <p style="color: grey;" id="taskDurationDisplay">Task Duration : </p>
     </div>
 </div>
