Worked on adding google sheet and vpn route and working on quote system

--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -8,6 +8,7 @@
 	<a routerLink="/orders-component" routerLinkActive="active">Orders</a>
 	<a routerLink="/invoice-component" routerLinkActive="active">Invoicing</a>
 	<a routerLink="/quote-component" routerLinkActive="active">Quotes</a>
+	<a routerLink="/vpn-component" routerLinkActive="active">VPN and Passwords</a>
 	<a (click)="logout()">Logout</a>
   </div>
   
