--- a/AlveoEnergy/src/app/components/gantt/gantt.component.html
+++ b/AlveoEnergy/src/app/components/gantt/gantt.component.html
@@ -1,6 +1,6 @@
+
+<input type="color" id="taskColor">
 <div #gantt_here class='gantt-chart'></div>
-Color
-<input id="taskColor" [(ngModel)]="taskColor">
 <div>
     <p>
         Task Properties
