--- a/AlveoEnergy/src/app/components/quote/quote.component.html
+++ b/AlveoEnergy/src/app/components/quote/quote.component.html
@@ -30,15 +30,15 @@ Add
 <div id="addItems" style="display: none;">
     <table style="margin-left: 315px; width: 800px;" *ngFor="let item of inventory | keyvalue">
         <th  style=" text-align: center; width: auto; background-color:grey; color: white;" >{{item.key}}</th>
-        <tr *ngFor='let elem of item.value'><input type="checkbox" style="margin-right: 10px;"><span style="display: inline-block; margin-right: 20px; min-width: 150px!important;">{{ elem.Description }}</span>  <span style="display: inline-block; margin-right: 20px; min-width: 80px!important;">{{elem.Unit}}</span>  <span style="display: inline-block; margin-right: 20px; min-width: 80px!important;">R{{elem.Rate}}</span>  
+        <tr *ngFor='let elem of item.value'><input type="checkbox" style="margin-right: 10px;"><span style="display: inline-block; margin-right: 80px; min-width: 210px!important;">{{ elem.Description }}</span>  <span style="display: inline-block; margin-right: 20px; min-width: 80px!important;">{{elem.Unit}}</span>  <span style="display: inline-block; margin-right: 20px; min-width: 80px!important;">R{{elem.Rate}}</span>  
             quantity : <input style="width: 50px;" type="number"> Total: R{{ elem.Rate * elem.Req}}
         </tr>
     </table>
 </div>
 
 
-<div id="contentToConvert">
-<div style="border: 1px solid black;" id="container">
+<div id="container">
+<div  id="quote" style="border: 1px solid black;">
 <header>
     <img style="height: 100px; width: 250px; margin-left: 300px;" alt="" src="../../../assets/img/Alveo Energy Logo Colour.jpg"><h1 style=" float: right; margin-top: 30px; margin-right: 300px;">QUOTE</h1>
 </header>
@@ -175,105 +175,104 @@ Add
     </tr>
 </table>
 </div>
-<div id="termsAndConditions" style=" margin-top: 20px">
+<div id="terms" style=" margin-top: 20px">
 <h2 style=" text-align: center; width: 100%; background-color: rgb(120, 180, 0); color: white;">Terms and Conditions</h2>
 
-<h4>1.ASSUMPTIONS</h4>
-<h5>1.1 QUOTE SPECIFIC</h5>
+<h4 style="text-decoration: underline;">1.ASSUMPTIONS</h4>
+<h5 style="text-decoration: underline;">1.1 QUOTE SPECIFIC</h5>
 <p>* Alveo Energy's quote assumptions, terms and conditions will take preference over any other contract signed.</p>
 <br>
-<h5>1.2 CLIENT RESPONSIBILITIES</h5>
+<h5 style="text-decoration: underline;">1.2 CLIENT RESPONSIBILITIES</h5>
 <p>* Electricity will be available during installation for power tools and for commissioning.</p>
 <p>* Access will be provided for the delivery and assembly of the equipment.</p>
 <p>* The purchase and installation of any lighting which may be required for successful operation is the responsibility of the client</p>
 <br>
-<h4>2. GENERAL TERMS AND CONDITIONS</h4>
-<h5>2.1 RISK AND OWNERSHIP</h5>
-<p>Notwithstanding delivery of any goods to the client, ownership of equipment shall not pass to the client until </p>
-<p>Alveo Energy has received payment in full for all goods and services associated with the manufacture, installation </p>
-<p>and commissioning of the equipment. If final settlement has not been received within six months after practical </p>
-<p>completion of the plant, Alveo Energy reserves the right to recover and sell the plant or any part thereof to recover </p>
+<h4 style="text-decoration: underline;">2. GENERAL TERMS AND CONDITIONS</h4>
+<h5 style="text-decoration: underline;">2.1 RISK AND OWNERSHIP</h5>
+<p>Notwithstanding delivery of any goods to the client, ownership of equipment shall not pass to the client until 
+Alveo Energy has received payment in full for all goods and services associated with the manufacture, installation </p>
+<p>and commissioning of the equipment. If final settlement has not been received within six months after practical
+completion of the plant, Alveo Energy reserves the right to recover and sell the plant or any part thereof to recover </p>
 <p>costs. The client will forfeit their deposit and/or any amounts paid to date.</p>
 <br>
-<h5>2.2 COMPLETION</h5>
-<p>Alveo Energy adheres to the General Conditions of Contract (GCC) for Construction Work (2015) requirements for </p>
-<p>project completion as outlined in section 5.14 of the said contract. The GCC defines three completion milestones </p>
-<p>with associated completion certificates in order to formalize the completions procedures on a project, namely </p>
-<p>Practical Completion, Completion and Final Approval. Alveo Energy prescribe to these projects milestone and the </p>
-<p>employer/employer’s agent is advised to familiarize themselves with the contractual terms associated with these </p>
-<p>milestones highlighted in section 5.14 of the GCC.</p>
+<h5 style="text-decoration: underline;">2.2 COMPLETION</h5>
+<p>Alveo Energy adheres to the General Conditions of Contract (GCC) for Construction Work (2015) requirements for
+project completion as outlined in section 5.14 of the said contract. The GCC defines three completion milestones </p>
+<p>with associated completion certificates in order to formalize the completions procedures on a project, namely 
+Practical Completion, Completion and Final Approval. Alveo Energy prescribe to these projects milestone and the </p>
+<p>employer/employer’s agent is advised to familiarize themselves with the contractual terms associated with these
+milestones highlighted in section 5.14 of the GCC.</p>
 <br>
-<p>In addition to the three milestones described in the preceding paragraph, Alveo Energy further defines an </p>
-<p>additional milestone relevant to the packaged Mechanical and Electrical works generally provided by Alveo Energy. </p>
+<p>In addition to the three milestones described in the preceding paragraph, Alveo Energy further defines an 
+additional milestone relevant to the packaged Mechanical and Electrical works generally provided by Alveo Energy. </p>
 <p>This additional milestone is named Factory Acceptance Testing (FAT) and is defined as follows:</p>
 <br>
-<p>Simulated testing performed on the designed equipment following assembly of the equipment, where the </p>
-<p>simulated testing is required to verify that the assembled equipment can operate at its design capacity and </p>
-<p>produce the required design products. Factory Acceptance Testing can be performed in the production factory or </p>
-<p>on a site as deemed suitable by the design engineer. The FAT must be performed according to the FAT checklists </p>
-<p>and documentation and signed off by Alveo Energy’s responsible engineer. The Employer/Employers Agent is also </p>
-<p>required to witness and sign-off the FAT certificate in order to confirm acceptance of the FAT.</p>
+<p>Simulated testing performed on the designed equipment following assembly of the equipment, where the 
+simulated testing is required to verify that the assembled equipment can operate at its design capacity and </p>
+<p>produce the required design products. Factory Acceptance Testing can be performed in the production factory or 
+on a site as deemed suitable by the design engineer. The FAT must be performed according to the FAT checklists </p>
+<p>and documentation and signed off by Alveo Energy’s responsible engineer. The Employer/Employers Agent is also 
+required to witness and sign-off the FAT certificate in order to confirm acceptance of the FAT.</p>
 <br>
-<p>In such cases where Alveo Energy cannot reach completion as a results of circumstances and delays outside of </p>
-<p>Alveo Energy’s control and during which a FAT has been completed, Alveo Energy will allow for a 6 month period </p>
-<p>from the completion of the FAT after which the warranty and defects liability period will be deemed to have taken </p>
-<p>effect from the date of the factory acceptance test as recorded on the factory acceptance test certificate.</p>
+<p>In such cases where Alveo Energy cannot reach completion as a results of circumstances and delays outside of
+Alveo Energy’s control and during which a FAT has been completed, Alveo Energy will allow for a 6 month period </p>
+<p>from the completion of the FAT after which the warranty and defects liability period will be deemed to have taken 
+effect from the date of the factory acceptance test as recorded on the factory acceptance test certificate.</p>
 <br>
-<h5>2.3 WARRANTY, LIABILITY AND INDEMNITY</h5>
-<p>Alveo Energy warrants the equipment against defective materials and workmanship for a period of one year from </p>
-<p>the date of completion, fair wear and tear excluded. The Warranty is subject to the following conditions:</p>
+<h5 style="text-decoration: underline;">2.3 WARRANTY, LIABILITY AND INDEMNITY</h5>
+<p>Alveo Energy warrants the equipment against defective materials and workmanship for a period of one year from 
+the date of completion, fair wear and tear excluded. The Warranty is subject to the following conditions:</p>
 <p>a) The purchase price and all other due fees associated with the treatment plant have been fully paid.</p>
 <p>b) The equipment has been correctly operated in accordance with the Operation and Maintenance manual.</p>
-<p>c) The equipment has not been subjected to undue climatic conditions beyond its design capacity. This includes </p>
-<p> rain, spray, wind, heat and dust.</p>
-<p>d) The warranty specifically excludes any damage caused by the client or client’s representative or that beyond </p>
-<p>the control of Alveo Energy.</p>
-<p>e) The warranty does not apply to our electrical panels and equipment connected to poor quality temporary </p>
-<p>electricity generators. These generators provide unbalanced phases with varying voltages. If electrical instruments </p>
+<p>c) The equipment has not been subjected to undue climatic conditions beyond its design capacity. This includes 
+ rain, spray, wind, heat and dust.</p>
+<p>d) The warranty specifically excludes any damage caused by the client or client’s representative or that beyond 
+the control of Alveo Energy.</p>
+<p>e) The warranty does not apply to our electrical panels and equipment connected to poor quality temporary 
+electricity generators. These generators provide unbalanced phases with varying voltages. If electrical instruments </p>
 <p>and motors are damaged while connected to temporary power generators, we will not be able to honour our gaurantees</p>
 <p>f) If the electrical panel is opened or tampered with, the warranty is null and void.</p>
 <p>g) It is the client’s responsibility to protect the equipment against power surges, which could damage equipment.</p>
-<p>h) Programming software is the Intellectual Property of Alveo Energy and shall not be distributed or communicated </p>
-<p>to third parties in any way.</p>
+<p>h) Programming software is the Intellectual Property of Alveo Energy and shall not be distributed or communicated 
+to third parties in any way.</p>
 <p>i) The starting date of the warranty is when completion is reached.</p>
-<p>Alveo Energy’s liability to the client shall in any event and under all circumstances be limited to the costs of </p>
-<p>remedying any defective workmanship, repairing any defective goods, or replacing any defective goods not capable of repair.</p>
-<p>Alveo Energy shall under no circumstance whatsoever be liable for any loss of profit or any damages of whatsoever </p>
-<p>nature, direct or indirect, consequential or otherwise, suffered by the client or any other person or entity, </p>
-<p>whether or not caused by the negligence of Alveo Energy, its agents or employees. Alveo Energy’s professional </p>
-<p>liability shall be limited to twice (2) the amount of the Design and Overheads fee.</p>
+<p>Alveo Energy’s liability to the client shall in any event and under all circumstances be limited to the costs of 
+remedying any defective workmanship, repairing any defective goods, or replacing any defective goods not capable of repair.</p>
+<p>Alveo Energy shall under no circumstance whatsoever be liable for any loss of profit or any damages of whatsoever 
+nature, direct or indirect, consequential or otherwise, suffered by the client or any other person or entity, </p>
+<p>whether or not caused by the negligence of Alveo Energy, its agents or employees. Alveo Energy’s professional 
+liability shall be limited to twice (2) the amount of the Design and Overheads fee.</p>
 <br>
-<h5>2.4 VARIATIONS</h5>
-<p>Additional work, equipment or features requested by the client or consultant will be treated as Variation Orders </p>
-<p>(VO). Alveo Energy will price the VO for approval and will only proceed once the financial and time implications of </p>
+<h5 style="text-decoration: underline;">2.4 VARIATIONS</h5>
+<p>Additional work, equipment or features requested by the client or consultant will be treated as Variation Orders 
+(VO). Alveo Energy will price the VO for approval and will only proceed once the financial and time implications of </p>
 <p>the VO have been approved.</p>
 <br>
-<h5>2.5 PAYMENT TERMS</h5>
+<h5 style="text-decoration: underline;">2.5 PAYMENT TERMS</h5>
 <p>Our payment terms are as follows:</p>
 <p>• 50% on acceptance of this proposal</p>
 <p>• 40% after manufacturing completion and FAT</p>
 <p>• 10% after commissioning</p>
 <p>• Variation Orders will be invoiced on their signed acceptance</p>
 <p>Alveo Energy will provide an Advance Payment Guarantee for the full sum of the works tendered on and awarder to Alveo Energy.</p>
-<p>Alveo Energy will only commence with the project once the client signs the proposal where required and the </p>
-<p>deposit is reflected on the bank statement. Note that no allowance for an Advanced Payment Guarantee (APG) </p>
-<p>has been made. All costs involved in obtaining an APG will be treated as a VO. Payment is required into a </p>
-<p>South African bank account belonging to Alveo Energy. Interest at SA prime plus 2% per annum will be charged on</p>
+<p>Alveo Energy will only commence with the project once the client signs the proposal where required and the 
+deposit is reflected on the bank statement. Note that no allowance for an Advanced Payment Guarantee (APG) </p>
+<p>has been made. All costs involved in obtaining an APG will be treated as a VO. Payment is required into a 
+South African bank account belonging to Alveo Energy. Interest at SA prime plus 2% per annum will be charged on</p>
 <p>late payments (calculated pro rata per day).</p>
 <br>
-<h5>2.6 DELIVERY</h5>
-<p>Equipment are quoted ex works Cape Town unless stated otherwise. Transport cost of MCC's are dependent on the </p>
-<p>type and size of the MCC as well as the delivery destination. Refer to the proposal document for the offer on delivery</p>
+<h5 style="text-decoration: underline;">2.6 DELIVERY</h5>
+<p>Equipment are quoted ex works Cape Town unless stated otherwise. Transport cost of MCC's are dependent on the type and size of the MCC as well as the delivery destination. Refer to the proposal document for the offer on delivery</p>
 <br>
-<h5>2.7 DELAYS</h5>
-<p>If long lead times are experienced on certain mechanical and electrical equipment, the client will be informed of </p>
-<p>expected delays or given an option to change the equipment to a similar approved product. Export or import, </p>
-<p>shipping and transport delays are not under the control of Alveo Energy and thus Alveo Energy will not be held </p>
-<p>responsible for such delays. Severe weather, strikes, coups, terrorism, war, epidemics, etc. </p>
-<p>(considered Force Majeure) or any such events that result in delays are out of the control of Alveo Energy and thus </p>
-<p>Alveo Energy will not be held responsible for such delays.</p>
-<p>If work on site is held up due to the client having to complete work required for environmental compliance, </p>
-<p>such as obtain a WULA or an EIA, Alveo Energy will be allowed to continue with commissioning work as to invoice </p>
+<h5 style="text-decoration: underline;">2.7 DELAYS</h5>
+<p>If long lead times are experienced on certain mechanical and electrical equipment, the client will be informed of 
+expected delays or given an option to change the equipment to a similar approved product. Export or import, </p>
+<p>shipping and transport delays are not under the control of Alveo Energy and thus Alveo Energy will not be held 
+responsible for such delays. Severe weather, strikes, coups, terrorism, war, epidemics, etc. </p>
+<p>(considered Force Majeure) or any such events that result in delays are out of the control of Alveo Energy and thus 
+Alveo Energy will not be held responsible for such delays.</p>
+<p>If work on site is held up due to the client having to complete work required for environmental compliance, 
+such as obtain a WULA or an EIA, Alveo Energy will be allowed to continue with commissioning work as to invoice </p>
 <p>the client in full.</p>
 </div>
 </div>
