updated quote component

--- a/AlveoEnergy/src/app/components/quote/quote.component.html
+++ b/AlveoEnergy/src/app/components/quote/quote.component.html
@@ -32,6 +32,11 @@
               <th mat-header-cell *matHeaderCellDef> For Attention </th>
               <td mat-cell *matCellDef="let element"> {{element.forAttention}} </td>
             </ng-container>
+
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef> Status </th>
+                <td [ngStyle]="{'background-color':element.status === 'Quoted' ? 'orange' : 'green' }"  mat-cell *matCellDef="let element"> {{element.status}} </td>
+              </ng-container>
           
           
             <tr mat-header-row *matHeaderRowDef="displayedQuoteColumnsList"></tr>
@@ -87,33 +92,33 @@
             
             
             <div id="container">
-            <div  id="quote" style="border: 1px solid black;">
+            <div  id="quote">
             <header>
-                <img style="height: 150px; width: 400px; margin-left: 50px;" alt="" src="../../../assets/img/Alveo Energy Logo Colour.jpg"><h1 style=" float: right; margin-top: 30px; margin-right: 30px;">QUOTE</h1>
+                <img style="height: 150px; width: 400px; margin-left: 80px;" alt="" src="../../../assets/img/Alveo Energy Logo Colour.jpg"><h1 style=" float: right; margin-top: 30px; margin-right: 80px;">QUOTE</h1>
             </header>
-            <div><table  style="margin-left: 50px; float: left; font-size: 16px;">
+            <div><table  style="margin-left: 80px; float: left;">
                 <tr>
                     <td>Address:</td>
-                    <td style="padding-left: 60px;">30 Mynhardt St</td>
+                    <td style="padding-left: 118px;">30 Mynhardt St</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td style="padding-left: 60px;">Gantzz plaza, Strand, 7140</td>
+                    <td style="padding-left: 118px;">Gantzz plaza, Strand, 7140</td>
                 </tr>
                 <tr>
                     <td>Phone:</td>
-                    <td style="padding-left: 60px;">021 851 2576</td>
+                    <td style="padding-left: 118px;">021 851 2576</td>
                 </tr>
                 <tr>
                     <td>Prepared By:</td>
-                    <td style="padding-left: 60px;">{{preparedBy}}</td>
+                    <td style="padding-left: 118px;">{{preparedBy}}</td>
                 </tr>
                 <tr>
                     <td>Email:</td>
-                    <td style="padding-left: 60px;">{{preparedByEmail}}</td>
+                    <td style="padding-left: 118px;">{{preparedByEmail}}</td>
                 </tr>
             </table>
-            <table style="float: right; margin-right: 50px; font-size: 16px;">
+            <table style="float: right; margin-right: 80px;">
                 <tr>
                     <td style="text-align: right;">DATE:</td>
                     <td style="padding-left: 80px;">{{quoteDate}}</td>
@@ -132,113 +137,142 @@
                 </tr>
             </table>
             </div>
-            <table style="margin-left: 50px; width: 320px; clear: both; font-size: 16px;">
+            <table style="margin-left: 80px; width: 500px; clear: both;">
                 <tr>
                     <td style="background-color: rgb(120, 180, 0); color: white;">Customer</td>
                     <td style="background-color: rgb(120, 180, 0);"></td>
                 </tr>
                 <tr>
                     <td>ORDER NO:</td>
-                    <td style="padding-left: 38px;">{{orderNumber}}</td>
+                    <td>{{orderNumber}}</td>
                 </tr>
                 <tr>
                     <td>PROJECT:</td>
-                    <td style="padding-left: 38px;">{{projectName}}</td>
+                    <td>{{projectName}}</td>
                 </tr>
                 <tr>
                     <td>ATTENTION:</td>
-                    <td style="padding-left: 38px;">{{attention}}</td>
+                    <td>{{attention}}</td>
                 </tr>
                 <tr>
                     <td>PREPARED FOR:</td>
-                    <td style="padding-left: 38px;">{{preparedFor}}</td>
+                    <td>{{preparedFor}}</td>
                 </tr>
                 <tr>
                     <td>ADDRESS:</td>
-                    <td style="padding-left: 38px;">{{customerAddress1}}</td>
+                    <td>{{customerAddress1}}</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td style="padding-left: 38px;">{{customerAddress2}}</td>
+                    <td>{{customerAddress2}}</td>
                 </tr>
                 <tr>
                     <td>PHONE:</td>
-                    <td style="padding-left: 38px;">{{customerContactNumber}}</td>
+                    <td>{{customerContactNumber}}</td>
                 </tr>
                 <tr>
                     <td>EMAIL:</td>
-                    <td style="padding-left: 38px;">{{customerEmail}}</td>
+                    <td>{{customerEmail}}</td>
                 </tr>
             </table>
-            <table style="margin-left: 50px; width: 100%; font-size: 16px;" id="quoteTable">
+            <table style="margin-left: 80px; margin-right: 80px; width: 90%;" id="quoteTable">
                 <th  style=" text-align: center; width: auto; background-color: rgb(120, 180, 0); color: white;">Description</th>
                 <th  style=" text-align: center; width: auto; background-color: rgb(120, 180, 0); color: white;">Req</th>
                 <th  style=" text-align: center; width: auto; background-color: rgb(120, 180, 0); color: white;">Unit</th>
                 <th  style=" text-align: center; width: auto; background-color: rgb(120, 180, 0); color: white;">Rate</th>
                 <th  style=" text-align: center; width: auto; background-color: rgb(120, 180, 0); color: white;">Ammount</th>
-                <tr>
+                <tr style="text-align: center;">
                     <td>1</td>
+                    <td>one</td>
+                    <td>een</td>
+                    <td>test 1</td>
+                    <td>1.00</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>2</td>
+                    <td>two</td>
+                    <td>twee</td>
+                    <td>test 2</td>
+                    <td>2.00</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>3</td>
+                    <td>three</td>
+                    <td>drie</td>
+                    <td>test 3</td>
+                    <td>3.00</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>4</td>
+                    <td>four</td>
+                    <td>vier</td>
+                    <td>test 4</td>
+                    <td>4.00</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>5</td>
+                    <td>five</td>
+                    <td>vyf</td>
+                    <td>test 5</td>
+                    <td>5.00</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>6</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>7</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>8</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>9</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>10</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>11</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>12</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>13</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>14</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>15</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>16</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>17</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>18</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
                     <td>19</td>
                 </tr>
-                <tr>
+                <tr style="text-align: center;">
+                    <td>20</td>
+                </tr>
+                <tr style="text-align: center;">
+                    <td>18</td>
+                </tr>
+                <tr style="text-align: center;">
+                    <td>19</td>
+                </tr>
+                <tr style="text-align: center;">
                     <td>20</td>
                 </tr>
             </table>
             
-            <table style="float: left; margin-left: 50px; margin-top: 40px; font-size: 16px;">
+            <table style="float: left; margin-left: 80px; margin-top: 40px;">
                 <th style=" width: 320px; background-color: rgb(120, 180, 0); color: white;">
                     NOTES
                 </th>
@@ -247,30 +281,30 @@
                 </tr>
             </table>
             
-            <table style=" float: right; margin-right: 50px; margin-top: 15px; font-size: 16px;">
+            <table style=" float: right; margin-right: 80px; margin-top: 15px;">
                 <tr>
-                    <td style="width: auto; text-align: left;">Subtotal:</td>
-                    <td style="text-align: right;">R{{quoteSubTotal}}</td>
+                    <td style="width: auto; text-align: left; width: 120px;">Subtotal: </td>
+                    <td style="text-align: right;"> R<!--{{quoteSubTotal}}-->10 000.00</td>
                 </tr>
                 <tr>
-                    <td style="width: auto;text-align: left;">Tax Rate:</td>
-                    <td style="text-align: right;">{{quoteTaxRate}}%</td>
+                    <td style="width: auto;text-align: left; width: 120px;">Tax Rate: </td>
+                    <td style="text-align: right;"><!--{{quoteTaxRate}}-->15%</td>
                 </tr>
                 <tr>
-                    <td style="width: auto;text-align: left;">Tax Due:</td>
-                    <td style="text-align: right;">R{{quoteTaxDue}}</td>
+                    <td style="width: auto;text-align: left; width: 120px;">Tax Due: </td>
+                    <td style="text-align: right;"> R<!--{{quoteTaxDue}}-->1 500.00</td>
                 </tr>
                 <tr>
-                    <td style="width: auto;text-align: left;">Other</td>
-                    <td style="text-align: right;">R{{quoteOther}}</td>
+                    <td style="width: auto;text-align: left; width: 120px;">Other: </td>
+                    <td style="text-align: right;"> R<!--{{quoteOther}}-->0.00</td>
                 </tr>
                 <tr>
-                    <td style="width: auto;text-align: left;">TOTAL DUE</td>
-                    <td style="text-align: right;">R{{quoteTotal}}</td>
+                    <td style="width: auto;text-align: left; width: 120px;">TOTAL DUE: </td>
+                    <td style="text-align: right;"> R<!--{{quoteTotal}}-->11 500.00</td>
                 </tr>
             </table>
             <p style=" text-align:center; clear:both">Please see terms and conditions on page 2</p>
-            <table style=" width: 800px; border: 1px solid black; margin-left: 50px;">
+            <table style=" width: 800px; border: 1px solid black; margin-left: 250px; margin-bottom: 120px;">
                 <tr>
                     <td style=" border: 1px solid black; width: 450px; height: 80px;">
                         Customer Acceptance:
@@ -283,8 +317,9 @@
                 </tr>
             </table>
             </div>
-            <div id="terms" style=" margin-top: 20px">
-            <h2 style=" text-align: center; width: 100%; background-color: rgb(120, 180, 0); color: white;">Terms and Conditions</h2>
+            <div id="terms" style=" margin-top: 20px;">
+                <div style="margin-left: 20px; margin-top: 30px;">
+            <h2 style="margin-top: 40px; text-align: center; width: 100%; background-color: rgb(120, 180, 0); color: white;">Terms and Conditions</h2>
             
             <h4 style="text-decoration: underline;">1.ASSUMPTIONS</h4>
             <h5 style="text-decoration: underline;">1.1 QUOTE SPECIFIC</h5>
@@ -382,6 +417,7 @@
             <p>If work on site is held up due to the client having to complete work required for environmental compliance, 
             such as obtain a WULA or an EIA, Alveo Energy will be allowed to continue with commissioning work as to invoice </p>
             <p>the client in full.</p>
+            </div>
             </div>
             </div>
   
