added new company logo

--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="content">
-	<h2><img style="height: 100px; width: 100px;" src="../assets/img/AlveoLogo.png" alt="logo"> Alveo Energy Management</h2>
+	<h2><img style="height: 150px; width: 300px;" src="../assets/img/Alveo Energy Logo Black - High Res.png" alt="logo"></h2>
 	<router-outlet>
 	</router-outlet>
   </div>
